--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3,8 +3,11 @@
 footer {
   margin: 20px;
   font-size: 12px;
-  color: black
 } 
+
+body {
+  background-color:rgb(243, 11, 11);
+}
 
 .toast {
     /* dirty: below 'card' button  */
