--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3,10 +3,13 @@
 footer {
   margin: 20px;
   font-size: 12px;
+  background-color: rgb(212, 255, 177);
 } 
-
+html {
+  background-image: url("../images/achtergrond1.jpg") ;
+}
 body {
-  background-color:rgb(243, 11, 11);
+  background-color:rgb(255, 255, 255, 50%);
 }
 
 .toast {
